--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Germany -- Social life and customs'
 - !lcc 'DD'
+- GITenberg
 title: Home Life in Germany
 url: http://www.gutenberg.org/ebooks/28432
